<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.gaming.jeroen.rsrpechhulp.activities.RSRMainActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="end"
        android:background="@drawable/btn_bg"
        android:paddingStart="3dp"
        android:paddingEnd="10dp"
        android:title="@string/main_toolbar_text"
        tools:context="com.gaming.jeroen.rsrpechhulp.activities.RSRMainActivity">

        <ImageButton
            android:id="@+id/info_button"
            android:contentDescription="@string/toolbar_image_description"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:adjustViewBounds="true"
            android:background="@null"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/main_i" />

    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/fragment_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg">

        <Button
            android:id="@+id/alarm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/main_btn_warning"
            android:paddingStart="@dimen/frame_padding"
            android:paddingEnd="@dimen/frame_padding"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="@dimen/frame_padding"
            android:layout_marginLeft="@dimen/frame_padding"
            android:layout_marginRight="@dimen/frame_padding"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textSize="@dimen/normal_text_size"
            android:background="@drawable/button_background_selector"/>

    </FrameLayout>

</LinearLayout>
